<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

    <!--Cuadro localización actual-->

    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_now"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.497" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185"
            app:layout_constraintHorizontal_bias="0.0">

        <!--Latitud actual-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/current_latitude"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/actual_latitude_title"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/current_latitude_number"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:paddingEnd="30sp" />
        </LinearLayout>

        <!--Localización actual-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/current_length"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/actual_length_title"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/current_length_number"
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:paddingEnd="30sp" />

        </LinearLayout>
    </LinearLayout>


    <!--Cuadro localización objetivo-->

    <!--Cuadro latitud y longitud objetivo-->

    <!--    Botón ok-->

    <TextView
            android:text="@string/target_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/target_location_title"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/distance_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.364" />

    <TextView
            android:text="@string/explaination"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/explanation"
            app:layout_constraintBottom_toTopOf="@+id/distance_left"
            android:layout_marginBottom="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:id="@+id/target_location_square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.643"
            app:layout_constraintHorizontal_bias="0.0">

        <!--latitud objetivo-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/target_latitude"
                    android:layout_height="wrap_content"
                    android:text="@string/target_latitude"
                    android:paddingEnd="30sp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:layout_weight="0.5"
                    tools:layout_editor_absoluteY="395dp"
                    tools:layout_editor_absoluteX="53dp"
                    android:layout_width="wrap_content" />

            <EditText
                    android:id="@+id/target_latitude_number"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingEnd="30sp"
                    android:textAlignment="textEnd"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_width="196sp"
                    android:layout_height="wrap_content" />
        </LinearLayout>

        <!--longitud objetivo-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/target_length"
                    android:text="@string/target_length"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingEnd="30sp"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="395dp"
                    tools:layout_editor_absoluteX="53dp" />

            <EditText
                    android:id="@+id/target_length_number"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingEnd="30sp"
                    android:inputType="numberDecimal|numberSigned"
                    android:textAlignment="textEnd"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <Button
            android:text="OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toTopOf="@+id/distance_left"
            app:layout_constraintTop_toBottomOf="@+id/target_location_square"
            app:layout_constraintVertical_bias="0.233" />


    <TextView
            android:id="@+id/distance_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/distance_left"
            android:textAlignment="center"
            android:background="#2962FF"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:text="Localización actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.858" />


</androidx.constraintlayout.widget.ConstraintLayout>